<resources>
    <string name="app_name">ApToon</string>
    <string name="splash_screen_content">Unlimited\n  entertainment,one\n low price\n
   </string>
    <string name="splash_screen_content1"> Lorem ipsum is simply dummy text of theprinting\n
    and typesetting industry</string>
    <string name="signin">SIGN IN</string>
    <string name="Login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">Or</string>
    <string name="Facebook">Facebook</string>
    <string name="Google">Google+</string>
    <string name="signuplink">Now to<font color="#F0F03B"> apToon?</font>>Sign up Now.</string>
    <string name="Sign">Sign In</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="login_now_text">You have an account <font color="#F0F03B"> apToon?</font> Login Now.</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="mycoins">My Coins</string>
    <string name="mylist">My LIst</string>
    <string name="downloads">Downloads</string>
    <string name="appsettings">App Settings</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="signout">Sign Out</string>
    <string name="after_series_genric_etc">After,series,genric,etc</string>
    <string name="Whats_new">What\'s next?</string>
    <string name="search_field_text_content">Search for programmes for the commute,films to help unwind,or your go-to genres.</string>
    <string name="save">Save</string>
    <string name="Manage_Profile">Manage Profile</string>
    <string name="no_download_yet">No video downloaded yet....</string>
    <string name="download_decriptions">Films and Tv programmes that you downloads appear here.</string>
    <string name="whoops">Whoops !</string>
    <string name="internet_descritions">No Internet connection found.\n Check your connection or Try again</string>
    <string name="fron_date">From 10th April</string>
    <string name="notification_text">Erinnern</string>
    <string name="title">The Protector:Season 2</string>
    <string name="title_description">A young fighter named Kham must go to Australia to retrieve his stolen elephant. With the help of a Thai-born Australian detective, Kham must take on all comers, including a gang led by an evil woman and her two deadly bodyguards.</string>
    <string name="app_settings">App Settings</string>
    <string name="video_palyback">Video Playback</string>
    <string name="mobile_data">Mobile Data Usage</string>
    <string name="automatic">Automatic</string>
    <string name="notifications">Notifications</string>
    <string name="allow_noti">Allow Notifications</string>
    <string name="downloads_text">Downloads</string>
    <string name="wifi_only">Wi-Fi Only</string>
    <string name="legal">Legal</string>
    <string name="privacy">Privacy</string>
    <string name="Glass">Glass</string>
    <string name="zero">0</string>
    <string name="count_tik">1/13</string>
    <string name="language">Language</string>
    <string name="English">English</string>
    <string name="germany">Germany</string>
    <string name="Arabic">Arabic</string>
    <string name="French">French</string>
    <string name="Spanish">Spanish</string>
    <string name="Russian">Russian</string>
    <string name="Home">Home</string>
    <string name="search">Search</string>
    <string name="livetv">Live Tv</string>
    <string name="soon">Soon</string>
    <string name="more">More</string>
    <string name="facebook_app_id" translatable="false">2021503444628341</string>
 <string name="fb_login_protocol_scheme" translatable="false"></string>
    <string name="err_msg_password" translatable="false">Please enter password</string>
 <string name="err_msg_email" translatable="false">Please enter valid email</string>

</resources>
