<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:background="@drawable/signup_main_bg"
    tools:context=".view.activity.SignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/back_icon" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/aptoon" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/email_desgin"
            android:textColorHint="@color/white"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/email_or_phone_number"
                android:inputType="textEmailAddress"
                android:textSize="15dp"
                android:padding="@dimen/signbuttontext"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>
        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/email_desgin"
            android:textColorHint="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/password"
                android:textSize="15dp"
                android:inputType="textPassword"
                android:padding="@dimen/signbuttontext"
                android:textColor="@color/white" />
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/signin_button"
            android:padding="@dimen/padding"
            android:text="@string/Sign"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/forgotpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="@dimen/signbuttontext" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/white"
            android:textSize="@dimen/signbuttontext" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/facebook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/facebook"
                android:drawableStart="@drawable/logo_facebook"
                android:padding="@dimen/signbuttontext"
                android:shadowRadius="1"
                android:text="@string/Facebook"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/signbuttontext" />
            <com.facebook.login.widget.LoginButton
                android:id="@+id/facebook_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
            <Button
                android:id="@+id/google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/google"
                android:drawableLeft="@drawable/logo_googleplus"
                android:padding="@dimen/signbuttontext"
                android:text="@string/Google"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/signbuttontext" />
            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_signin"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/signuplink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/signbuttontext"
            android:gravity="center"
            android:text="@string/signuplink"
            android:textColor="@color/white"
            android:textSize="@dimen/signbuttontext" />

    </LinearLayout>
</LinearLayout>