<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/relative1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:layoutDirection="ltr"
    tools:context=".view.activity.Splash_SignIn">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/splash_screen_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textDirection="ltr"
            android:textSize="@dimen/splash2text"
            android:textStyle="bold" />

        <TextView
                android:id="@+id/text1111"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/splash_screen_content1"
            android:textColor="@color/white"
            android:textDirection="ltr"
            android:textSize="@dimen/splash2text2" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">


            <Button
                android:id="@+id/signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/signinbuttonmargin"
                android:background="@drawable/signin_button"
                android:gravity="center"
                android:text="@string/signin"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/signbuttontext" />
        </RelativeLayout>
    </RelativeLayout>
    <include layout="@layout/no_internet_dialog"
        android:visibility="gone"/>
</RelativeLayout>