<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layoutDirection="ltr"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/signup_main_bg">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
        <ImageView
                android:id="@+id/soon_thumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/soon_image"
            android:scaleType="centerCrop"/>
         <ImageView
             android:id="@+id/play_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/play_circle"
            android:layout_centerInParent="true"/>
        </RelativeLayout>
    <TextView
        android:id="@+id/from_date"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/fron_date"
        android:textDirection="ltr"
        android:textColor="@color/date_color"
        android:paddingLeft="12dp"/>

        <LinearLayout
            android:id="@+id/notification_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:padding="8dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/notification_bg"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="12dp"
                android:text="@string/notification_text"
                android:textDirection="ltr"
                android:textColor="@color/white"
                android:textSize="15sp" />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/notifications" />
        </LinearLayout>
        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="12dp"
            android:textDirection="ltr"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/movie_descriptions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="12sp"
            android:layout_gravity="center_horizontal"
            android:textDirection="ltr"
            android:text="@string/title_description"
            android:textColor="@color/description_color"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>
