<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/signup_main_bg"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".view.activity.Signup">

    <ImageView
        android:id="@+id/imBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:padding="14dp"
        android:src="@drawable/back_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvLoginNowText"
        android:layout_below="@+id/imBack"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:layoutDirection="ltr"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:src="@drawable/aptoon" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:background="@drawable/text_input_bg"
            android:padding="8dp"
            android:textColorHint="#FFFFFF"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/email_or_phone_number"
                android:padding="4dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="normal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_fullname"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:background="@drawable/text_input_bg"
            android:padding="4dp"
            android:textColorHint="#FFFFFF"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/input_fullname"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/full_name"
                android:padding="4dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="normal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:background="@drawable/text_input_bg"
            android:padding="4dp"
            android:textColorHint="#FFFFFF"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout" >

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="4dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="normal" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_cpassword"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:background="@drawable/text_input_bg"
            android:padding="4dp"
            android:textColorHint="#FFFFFF"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:id="@+id/input_cpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="normal" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/Signup_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:background="@drawable/button_signup_bg"
            android:padding="16dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="normal" />


    </LinearLayout>

    <TextView
        android:id="@+id/tvLoginNowText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:text="@string/login_now_text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textDirection="ltr"
        android:textSize="14sp"
        android:textStyle="normal" />
</RelativeLayout>