<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/more_bacground_gradient"
    android:layoutDirection="ltr"
    tools:context=".view.fragment.MoreFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/belowlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="@dimen/signbuttontext" />

        <com.aptoon.view.design.CircularImageView
            android:id="@+id/user_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/user_photo" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/signbuttontext"
            android:gravity="center"
            android:text="Daniel Jhansen"
            android:textColor="@color/white"
            android:textSize="@dimen/signbuttontext" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/belowlayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/view_line_color" />

            <LinearLayout
                android:id="@+id/mycoins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ll1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/coin_image"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="@dimen/signbuttontext"
                        android:src="@drawable/my_coins" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.6">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mycoins"
                        android:textColor="@color/white"
                        android:textSize="@dimen/signbuttontext" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/coins_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/my_coins_shape"
                        android:gravity="center"
                        android:text="100"
                        android:textColor="@color/yellow"
                        android:textSize="@dimen/signbuttontext" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/view_line_color" />

            <LinearLayout
                android:id="@+id/mylist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/mylist_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/signbuttontext"
                    android:src="@drawable/my_list_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/mylist"
                    android:textColor="@color/white"
                    android:textSize="@dimen/signbuttontext" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/view_line_color" />

            <LinearLayout
                android:id="@+id/downloads"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/download_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/signbuttontext"
                    android:src="@drawable/download_" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/downloads"
                    android:textColor="@color/white"
                    android:textSize="@dimen/signbuttontext" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/view_line_color" />

            <LinearLayout
                android:id="@+id/appsetting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/appsetting_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/signbuttontext"
                    android:src="@drawable/settings" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/appsettings"
                    android:textColor="@color/white"
                    android:textSize="@dimen/signbuttontext" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/view_line_color" />

            <LinearLayout
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/account_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/signbuttontext"
                    android:src="@drawable/md_person" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/account"
                    android:textColor="@color/white"
                    android:textSize="@dimen/signbuttontext" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/view_line_color" />

            <LinearLayout
                android:id="@+id/help"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/help_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/signbuttontext"
                    android:src="@drawable/help" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/help"
                    android:textColor="@color/white"
                    android:textSize="@dimen/signbuttontext" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/signout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/signbuttontext"
                    android:src="@drawable/md_exit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/signout"
                    android:textColor="@color/white"
                    android:textSize="@dimen/signbuttontext" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
